2004-10-14  Kenichi Handa  <handa@m17n.org>

	* m17n-X.c (device_open): Accept Mxft as the value of key Mfont.

2004-10-13  Kenichi Handa  <handa@m17n.org>

	* m17n-X.c (device_open): Be sure to register at least one font
	driver.

	* font-ft.c: Include <freetype/ftbdf.h> conditionally.  Check
	HAVE_FTBDF_H before calling FT_Get_BDF_Property.

2004-10-12  Kenichi Handa  <handa@m17n.org>

	* draw.c (alloc_gstring): Fix previous change.

	* font-ft.c (ft_list_generic): Fix for the case of not
	HAVE_FONTCONFIG.

	* m17n-X.c (mwin__parse_event): Fix for non-ASCII keys.

	* font.c (mfont_list): If no font is found, return NULL.
	(load_font_encoding_table): Put entries of nil registry first.
	(find_encoding): Adjust for the above change.

2004-10-11  Kenichi Handa  <handa@m17n.org>

	* m17n-gui.h (mfont_list): Adjust prototype.

	* m17n-X.c (xfont_list): New arg maxnum.

	* font.h (struct MFontDriver): Change prototype of <list>.

	* font-ft.c (fc_generic_family_list): Delete it.
	(Mserif, Msans_serif, Mmonospace): Delete them.
	(M_generic_family_info): New variable.
	(enum GenericFamilyType): New enum.
	(struct GenericFamilyInfo): New struct.
	(generic_family_table): New variable.
	(set_font_info): New arg style. Don't check 0xA0..0xBF to decide
	iso8859-1.
	(add_font_info): Get style here.
	(ft_list_family): Don't initialize fc_config here.  Don't list
	generic families.
	(ft_list_generic): New function.
	(ft_select): Pay attention to generic familes here.
	(ft_open): Fix calculation of ascent and descent.
	(ft_list): Pay attention to generic families.
	(mfont__ft_init): Initialize M_generic_family_info,
	generic_family_table, and fc_config..
	(mfont__ft_fini): Finalize generic_family_table.

	* draw.c (compose_glyph_string): Use more constant font for
	glyphs.  Adjust for the member change in MGlyph.
	(layout_glyph_string): Adjust for the member change in MGlyph.
	(alloc_gstring): Intilize scracth_glyph to avoid
	compose_glyph_string on it.